- fix(flavor): applying Google services plugin for only production flavor.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,5 @@
 plugins {
     id "com.android.application"
-    // START: FlutterFire Configuration
-    id 'com.google.gms.google-services'
-    // END: FlutterFire Configuration
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
@@ -57,4 +54,9 @@ android {
 
 flutter {
     source = "../.."
+}
+
+// Apply Google services plugin only for the production flavor
+if (gradle.startParameter.taskNames.any { it.contains("Production") }) {
+    apply plugin: 'com.google.gms.google-services'
 }
