--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,12 +34,12 @@ android {
     productFlavors {
         production {
             dimension "default"
-            resValue "string", "app_name", "DocDoc Production"
+            resValue "string", "app_name", "Docdoc Production"
         }
         development {
             dimension "default"
             applicationIdSuffix ".dev"
-            resValue "string", "app_name", "DocDoc Development"
+            resValue "string", "app_name", "Docdoc Development"
         }
     }
 
