--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,14 @@ dependencies:
   fluttertoast: ^8.2.8
   # Firebase
   firebase_core: ^3.6.0
+  # For loading and caching network images
+  cached_network_image: ^3.4.1
+  # To show loading animation when the app is in loading state
+  loading_animation_widget: ^1.3.0
+  # To reading and writing simple key-value pairs in local storage
+  shared_preferences: ^2.3.2
+  # Provides API to store data in secure storage.
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
